# tcp-h264-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  armv7.Dockerfile  build.sh  docker-compose.yml
src/: cli.rs  h264.rs  main.rs  utils.rs
src/implem/camera/: image.rs  mod.rs  video.rs
src/implem/camera/settings/: camera_provider.rs  mod.rs  resolution.rs  rotation.rs
src/model/: cli.rs  mod.rs
src/model/camera/: settings.rs
src/service/: image.rs  mod.rs  read_h264.rs  video.rs  write_h264.rs
