[package]
name = "tcp-h264-server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tcp-h264-server"
path = "src/main.rs"

[dependencies]
argh = "^0.1.7"
log = "^0.4.14"
env_logger = "^0.9.0"

[dependencies.hyper]
version = "^0.14.16"
features = ["server", "tcp", "http1"]

[dependencies.tokio]
version = "^1.15.0"
features = ["full"]

[profile.release]
lto = "thin"
